--- a/app/src/main/res/layout/activity_battlefield.xml
+++ b/app/src/main/res/layout/activity_battlefield.xml
@@ -234,32 +234,32 @@
 
                 </TableRow>
 
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                <!--<TableRow-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent">-->
 
-                    <TextView
-                        android:id="@+id/timeTextSecondPlayer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/currentScoreSecondPlayer"
-                        android:layout_toEndOf="@+id/currentScoreSecondPlayer"
-                        android:layout_weight="1"
-                        android:text="@string/time"
-                        android:textColor="@android:color/white"
-                        android:textSize="18sp" />
+                    <!--&lt;!&ndash;<TextView&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:id="@+id/timeTextSecondPlayer"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:layout_below="@+id/currentScoreSecondPlayer"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:layout_toEndOf="@+id/currentScoreSecondPlayer"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:layout_weight="1"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:text="@string/time"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:textColor="@android:color/white"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:textSize="18sp" />&ndash;&gt;-->
 
-                    <TextView
-                        android:id="@+id/timeValueSecondPlayer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/stepSecondPlayer"
-                        android:layout_toStartOf="@+id/stepSecondPlayer"
-                        android:layout_weight="1"
-                        android:text="0:00"
-                        android:textColor="@android:color/white"
-                        android:textSize="18sp" />
-                </TableRow>
+                    <!--&lt;!&ndash;<TextView&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:id="@+id/timeValueSecondPlayer"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:layout_below="@+id/stepSecondPlayer"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:layout_toStartOf="@+id/stepSecondPlayer"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:layout_weight="1"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:text="0:00"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:textColor="@android:color/white"&ndash;&gt;-->
+                        <!--&lt;!&ndash;android:textSize="18sp" />&ndash;&gt;-->
+                <!--</TableRow>-->
             </TableLayout>
 
         </TableRow>
