--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context = ".activity"
-    >
+    tools:context=".activity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
@@ -12,9 +11,9 @@
 
     <item
         android:id="@+id/action_restart"
+        android:icon="@drawable/ic_refresh_white_36dp"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        android:icon="@drawable/ic_refresh_white_36dp"
         app:showAsAction="ifRoom" />
 
 </menu>
