--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -2,6 +2,6 @@
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle"
         android:padding="10dp">
-        <solid android:color="#ffec8b"/>
-        <corners android:radius="10dp"/>
+        <solid android:color="@color/colorButton"/>
+        <corners android:radius="5dp"/>
     </shape>
