--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_start_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_earth"
+    android:background="@color/colorBackground"
+    android:fitsSystemWindows="true"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:fitsSystemWindows="true"
     tools:context="com.example.mishka.flagmemorine.activity.StartActivity">
 
     <LinearLayout
@@ -142,7 +143,7 @@
                 android:layout_weight="1"
                 android:checked="true"
                 android:text="@string/xxlarge"
-                android:textSize="13sp" />
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/xxlargeAvailableUsers"
