--- a/app/src/main/res/layout/activity_statistic.xml
+++ b/app/src/main/res/layout/activity_statistic.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_earth"
+    android:background="@color/colorBackground"
     android:orientation="vertical"
     android:paddingEnd="10dp"
     android:paddingStart="10dp"
@@ -69,6 +69,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
         android:orientation="horizontal">
 
         <ToggleButton
