--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -3,13 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorBackground"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="5dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorBackground"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,9 +21,9 @@
             android:padding="16dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="5"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
 
@@ -34,13 +37,14 @@
                     android:layout_gravity="left|start"
                     android:gravity="left|start"
                     android:text="999"
-                    android:textSize="24sp" />
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
             </LinearLayout>
 
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="100">
+                android:layout_weight="1">
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -48,20 +52,23 @@
 
                     <ImageView
                         android:id="@+id/person_photo"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
                         android:layout_marginRight="16dp"
+                        android:layout_weight="1"
                         app:srcCompat="@drawable/unknown" />
 
                     <TextView
                         android:id="@+id/person_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:layout_toRightOf="@id/person_photo"
+                        android:layout_weight="3"
                         android:text="Mishka"
+                        android:textColor="@android:color/black"
                         android:textSize="30sp" />
 
                 </TableRow>
@@ -74,22 +81,25 @@
 
                     <TextView
                         android:id="@+id/person_age"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@+id/person_name"
                         android:layout_below="@+id/person_name"
-                        android:text="test" />
+                        android:layout_weight="1"
+                        android:text="test"
+                        android:textColor="@android:color/black" />
 
                     <TextView
                         android:id="@+id/date"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/person_name"
                         android:layout_gravity="start"
-                        android:layout_marginStart="48dp"
                         android:layout_toEndOf="@+id/person_age"
+                        android:layout_weight="3"
                         android:gravity="start"
-                        android:text="TextView" />
+                        android:text="TextView"
+                        android:textColor="@android:color/black" />
                 </TableRow>
 
             </TableLayout>
