--- a/app/src/main/res/layout/cspinner_row.xml
+++ b/app/src/main/res/layout/cspinner_row.xml
@@ -3,36 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="start"
+    android:gravity="start"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/ivFlag"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:layout_weight="1"
         android:layout_gravity="start"
+        android:layout_weight="2"
+        android:padding="5dp"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <!--<TextView-->
-        <!--android:id="@+id/tvPopulation"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_below="@+id/tvName"-->
-        <!--android:layout_toEndOf="@+id/ivFlag"-->
-        <!--android:layout_toRightOf="@+id/ivFlag"-->
-        <!--android:padding="5dp"-->
-        <!--android:text="TextView"-->
-        <!--android:textStyle="bold" />-->
+    <!--android:id="@+id/tvPopulation"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@+id/tvName"-->
+    <!--android:layout_toEndOf="@+id/ivFlag"-->
+    <!--android:layout_toRightOf="@+id/ivFlag"-->
+    <!--android:padding="5dp"-->
+    <!--android:text="TextView"-->
+    <!--android:textStyle="bold" />-->
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="start"
         android:layout_toEndOf="@+id/ivFlag"
         android:layout_toRightOf="@+id/ivFlag"
-        android:padding="5dp"
         android:layout_weight="1"
+        android:padding="5dp"
         android:text="TextView"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
