--- a/app/src/main/res/layout/multiplayer_end_of_game.xml
+++ b/app/src/main/res/layout/multiplayer_end_of_game.xml
@@ -19,6 +19,33 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/firstPlayerName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="@string/win"
+                android:textColor="@android:color/holo_green_light"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/secondPlayerName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="@string/lose"
+                android:textColor="@android:color/holo_green_light"
+                android:textSize="24sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <TextView
