--- a/app/src/main/res/layout/content_rooms.xml
+++ b/app/src/main/res/layout/content_rooms.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/relativelayoutrooms"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.mishka.flagmemorine.activity.RoomsActivity"
+    tools:context="com.rodionov.mishka.flagmemorine.activity.RoomsActivity"
     tools:showIn="@layout/app_bar_rooms">
 
     <TextView
