--- a/app/src/main/res/layout/activity_statistic.xml
+++ b/app/src/main/res/layout/activity_statistic.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:paddingEnd="10dp"
     android:paddingStart="10dp"
-    tools:context="com.example.mishka.flagmemorine.activity.StatisticActivity">
+    tools:context="com.rodionov.mishka.flagmemorine.activity.StatisticActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
