--- a/app/src/main/res/layout/activity_test_interaction.xml
+++ b/app/src/main/res/layout/activity_test_interaction.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.mishka.flagmemorine.activity.TestInteraction">
+    tools:context="com.rodionov.mishka.flagmemorine.activity.TestInteraction">
 
     <TextView
         android:id="@+id/receiveText"
