--- a/app/src/main/res/layout/activity_wait_user.xml
+++ b/app/src/main/res/layout/activity_wait_user.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context="com.example.mishka.flagmemorine.activity.WaitUserActivity">
+    android:orientation="vertical"
+    tools:context="com.rodionov.mishka.flagmemorine.activity.WaitUserActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:gravity="bottom"
         android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
@@ -30,12 +33,6 @@
                 app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />
 
         </android.support.design.widget.AppBarLayout>
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,6 +65,28 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="@android:color/white" />
+
         </LinearLayout>
+
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        tools:layout_editor_absoluteY="567dp">
+
+        <ProgressBar
+            android:id="@+id/progBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:indeterminateTint="@android:color/white"
+            android:indeterminateTintMode="src_in" />
+    </LinearLayout>
+</LinearLayout>
