--- a/app/src/main/res/layout/app_bar_rooms.xml
+++ b/app/src/main/res/layout/app_bar_rooms.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mishka.flagmemorine.activity.RoomsActivity">
+    tools:context="com.rodionov.mishka.flagmemorine.activity.RoomsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
