--- a/app/src/main/res/layout/content_room_battle_field.xml
+++ b/app/src/main/res/layout/content_room_battle_field.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.mishka.flagmemorine.activity.RoomBattleFieldActivity"
+    tools:context="com.rodionov.mishka.flagmemorine.activity.RoomBattleFieldActivity"
     tools:showIn="@layout/app_bar_room_battle_field">
 
 </android.support.constraint.ConstraintLayout>
