--- a/app/src/main/res/layout/content_user_info.xml
+++ b/app/src/main/res/layout/content_user_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.mishka.flagmemorine.activity.UserInfoActivity"
+    tools:context="com.rodionov.mishka.flagmemorine.activity.UserInfoActivity"
     tools:showIn="@layout/activity_user_info">
 
     <LinearLayout
