--- a/app/src/main/res/layout/activity_wait_user.xml
+++ b/app/src/main/res/layout/activity_wait_user.xml
@@ -38,14 +38,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp">
 
             <TextView
                 android:id="@+id/firstPlayerName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:ellipsize="middle"
                 android:gravity="center"
+                android:singleLine="true"
                 android:textColor="@android:color/white" />
 
             <TextView
@@ -63,7 +67,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:ellipsize="marquee"
                 android:gravity="center"
+                android:singleLine="true"
                 android:textColor="@android:color/white" />
 
         </LinearLayout>
