--- a/app/src/main/res/layout/activity_battlefield.xml
+++ b/app/src/main/res/layout/activity_battlefield.xml
@@ -48,30 +48,30 @@
         </LinearLayout>
     </ScrollView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingEnd="10dp"
-        android:paddingStart="10dp">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:paddingEnd="10dp"-->
+        <!--android:paddingStart="10dp">-->
 
-        <TextView
-            android:id="@+id/actionLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/actionLabel"
-            android:textColor="@android:color/white"
-            android:textSize="18sp" />
+        <!--<TextView-->
+            <!--android:id="@+id/actionLabel"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:gravity="center"-->
+            <!--android:text="@string/actionLabel"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:textSize="18sp" />-->
 
-        <ImageView
-            android:id="@+id/actionImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_highlight_off_white_48dp" />
-    </LinearLayout>
+        <!--<ImageView-->
+            <!--android:id="@+id/actionImage"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:srcCompat="@drawable/ic_highlight_off_white_48dp" />-->
+    <!--</LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -94,6 +94,38 @@
             android:textSize="30dp" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp">
+
+        <TextView
+            android:id="@+id/localPlayerName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:singleLine="true"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/enemyPlayerName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:paddingEnd="1dp"
+            android:paddingStart="1dp"
+            android:singleLine="true"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+    </LinearLayout>
+
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -111,24 +143,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingEnd="1dp"
-                    android:paddingStart="1dp">
-
-                    <TextView
-                        android:id="@+id/localPlayerName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ellipsize="end"
-                        android:gravity="center"
-                        android:singleLine="true"
-                        android:textColor="@android:color/white"
-                        android:textSize="18sp" />
-                </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -208,8 +222,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/step"
+                        android:layout_gravity="start"
                         android:layout_toStartOf="@+id/step"
                         android:layout_weight="1"
+                        android:gravity="start"
                         android:text="0:00"
                         android:textColor="@android:color/white"
                         android:textSize="18sp" />
@@ -220,24 +236,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/enemyPlayerName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ellipsize="end"
-                        android:gravity="center"
-                        android:paddingEnd="1dp"
-                        android:paddingStart="1dp"
-                        android:singleLine="true"
-                        android:textColor="@android:color/white"
-                        android:textSize="18sp" />
-                </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
