--- a/app/src/main/res/layout/activity_statistic.xml
+++ b/app/src/main/res/layout/activity_statistic.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     android:orientation="vertical"
+    android:paddingBottom="10dp"
     android:paddingEnd="10dp"
     android:paddingStart="10dp"
     tools:context="com.rodionov.mishka.flagmemorine.activity.StatisticActivity">
@@ -29,42 +30,42 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:orientation="horizontal">-->
 
-        <ToggleButton
-            android:id="@+id/hourTB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/rounded_button"
-            android:checked="false"
-            android:textOff="@string/hour"
-            android:textOn="@string/hour" />
+    <!--<ToggleButton-->
+    <!--android:id="@+id/hourTB"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginLeft="10dp"-->
+    <!--android:layout_weight="1"-->
+    <!--android:background="@drawable/rounded_button"-->
+    <!--android:checked="false"-->
+    <!--android:textOff="@string/hour"-->
+    <!--android:textOn="@string/hour" />-->
 
-        <ToggleButton
-            android:id="@+id/dayTB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/rounded_button"
-            android:textOff="@string/day"
-            android:textOn="@string/day" />
+    <!--<ToggleButton-->
+    <!--android:id="@+id/dayTB"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginLeft="10dp"-->
+    <!--android:layout_weight="1"-->
+    <!--android:background="@drawable/rounded_button"-->
+    <!--android:textOff="@string/day"-->
+    <!--android:textOn="@string/day" />-->
 
-        <ToggleButton
-            android:id="@+id/allTB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/rounded_button"
-            android:textOff="@string/all"
-            android:textOn="@string/all" />
-    </LinearLayout>
+    <!--<ToggleButton-->
+    <!--android:id="@+id/allTB"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginLeft="10dp"-->
+    <!--android:layout_weight="1"-->
+    <!--android:background="@drawable/rounded_button"-->
+    <!--android:textOff="@string/all"-->
+    <!--android:textOn="@string/all" />-->
+    <!--</LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -148,7 +149,11 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp">
 
     </android.support.v7.widget.RecyclerView>
 
