--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -30,81 +30,96 @@
                 <TextView
                     android:id="@+id/number"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/person_name"
-                    android:layout_alignBottom="@+id/person_name"
-                    android:layout_alignParentStart="false"
-                    android:layout_gravity="left|start"
-                    android:gravity="left|start"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="999"
                     android:textColor="@android:color/black"
                     android:textSize="18sp" />
             </LinearLayout>
 
-            <TableLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-                <TableRow
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/person_photo"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentTop="true"
+                        android:layout_height="match_parent"
                         android:layout_marginRight="16dp"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
                         app:srcCompat="@drawable/unknown" />
 
                     <TextView
                         android:id="@+id/person_name"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_toRightOf="@id/person_photo"
-                        android:layout_weight="3"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:ellipsize="end"
+                        android:singleLine="true"
                         android:text="Mishka"
                         android:textColor="@android:color/black"
                         android:textSize="30sp" />
 
-                </TableRow>
+                </LinearLayout>
 
-                <TableRow
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <!--app:srcCompat="@drawable/graph" />-->
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/person_age"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignStart="@+id/person_name"
-                        android:layout_below="@+id/person_name"
-                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2"
                         android:text="test"
                         android:textColor="@android:color/black" />
 
                     <TextView
                         android:id="@+id/date"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/person_name"
+                        android:layout_height="match_parent"
                         android:layout_gravity="start"
-                        android:layout_toEndOf="@+id/person_age"
-                        android:layout_weight="3"
+                        android:layout_weight="1"
+                        android:ellipsize="end"
                         android:gravity="start"
+                        android:singleLine="true"
                         android:text="TextView"
                         android:textColor="@android:color/black" />
-                </TableRow>
 
-            </TableLayout>
+                </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <!--app:srcCompat="@drawable/graph" />-->
+
+        </TableRow>
+
+    </TableLayout>
 
 </LinearLayout>
