--- a/app/src/main/res/layout/content_end_of_game.xml
+++ b/app/src/main/res/layout/content_end_of_game.xml
@@ -58,7 +58,7 @@
             android:layout_weight="3" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/statisticButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="100"
