--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorButton">#afb42b</color>
     <color name="colorBackground">#FF00897B</color>
+    <color name="textColor">#ffffff</color>
 </resources>
