--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -66,7 +66,7 @@
                         android:singleLine="true"
                         android:text="Mishka"
                         android:textColor="@android:color/black"
-                        android:textSize="30sp" />
+                        android:textSize="26sp" />
 
                 </LinearLayout>
 
@@ -80,6 +80,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="2"
+                        android:gravity="center"
                         android:text="test"
                         android:textColor="@android:color/black" />
 
