--- a/app/src/main/res/layout/content_user_info.xml
+++ b/app/src/main/res/layout/content_user_info.xml
@@ -25,8 +25,11 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:text="@string/user_name" />
+                android:layout_weight="2"
+                android:singleLine="true"
+                android:text="@string/user_name"
+                android:textColor="@color/textColor"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/userName"
@@ -46,8 +49,10 @@
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:text="@string/user_country" />
+                android:layout_weight="2"
+                android:text="@string/user_country"
+                android:textColor="@color/textColor"
+                android:textSize="18sp" />
 
             <Spinner
                 android:id="@+id/spinner"
