--- a/app/src/main/res/layout/multiplayer_end_of_game.xml
+++ b/app/src/main/res/layout/multiplayer_end_of_game.xml
@@ -81,6 +81,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/step"
+                android:textColor="@color/textColor"
                 android:textSize="24sp" />
 
             <TextView
@@ -90,6 +91,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/step"
+                android:textColor="@color/textColor"
                 android:textSize="24sp" />
         </LinearLayout>
 
@@ -105,6 +107,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/time"
+                android:textColor="@color/textColor"
                 android:textSize="24sp" />
 
             <TextView
@@ -114,6 +117,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/time"
+                android:textColor="@color/textColor"
                 android:textSize="24sp" />
         </LinearLayout>
 
@@ -129,6 +133,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/score"
+                android:textColor="@color/textColor"
                 android:textSize="24sp" />
 
             <TextView
@@ -138,6 +143,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:text="@string/score"
+                android:textColor="@color/textColor"
                 android:textSize="24sp" />
         </LinearLayout>
 
