--- a/app/src/main/res/layout/singleplayer_end_of_game.xml
+++ b/app/src/main/res/layout/singleplayer_end_of_game.xml
@@ -21,6 +21,7 @@
         android:layout_weight="1"
         android:gravity="center_horizontal"
         android:text="@string/step"
+        android:textColor="@color/textColor"
         android:textSize="24sp" />
 
     <TextView
@@ -30,6 +31,7 @@
         android:layout_weight="1"
         android:gravity="center_horizontal"
         android:text="@string/score"
+        android:textColor="@color/textColor"
         android:textSize="24sp" />
 
     <TextView
@@ -39,5 +41,6 @@
         android:layout_weight="1"
         android:gravity="center_horizontal"
         android:text="@string/time"
+        android:textColor="@color/textColor"
         android:textSize="24sp" />
 </LinearLayout>
